--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+body{
+  background: #131212;
+  font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+
+.mySwiper .swiper-slide:first-child{
+
+  padding-left: 16px!important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.mySwiper .swiper-slide:last-child{
+
+  padding-right: 16px!important;
+}
+
+
+.mySwiper .swiper-slide{
+  width: auto;
+  /* height: fit-content; */
+  max-width: 370px;
+  height: auto;
+  box-shadow: 0px 16px 35px 0px rgba(0, 0, 0, 0.25); 
+}
+
+
+@media only screen and (min-width: 450px) {
+  .mySwiper .swiper-slide{
+    width: 70%;
+    /* height: fit-content; */
+    max-width: 370px;
+    height: auto;
+    box-shadow: 0px 16px 35px 0px rgba(0, 0, 0, 0.25); 
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+@media only screen and (min-width: 640px) {
+  .mySwiper .swiper-slide{
+    width: 60%;
+    height: fit-content;
+    max-width: 370px;
+
+  }
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (min-width: 768px) {
+  .mySwiper .swiper-slide{
+    width: 60%;
+    height: fit-content;
+    max-width: 370px;
+
   }
-  to {
-    transform: rotate(360deg);
+
+  .mySwiper .swiper-slide:first-child{
+
+    padding-left: 0px!important;
   }
+  
+  .mySwiper .swiper-slide:last-child{
+  
+    padding-right: 0px!important;
+  }
+
+  .mySwiper{
+    padding: 0px 16px!important;
+  }
+
 }
